--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,3 @@
-
 :root {
     --width: clamp(275px, calc(76vw - 2rem), 600px);
     --fz: clamp(18px, 2em, 26px);
@@ -6,13 +5,14 @@
     --fc-pink: hsl(299, 89%, 41%);
 }
 
-#form387249820{
+#form387249820 {
     .mistake {
         display: none;
         text-align: center;
         font-size: max(2em, 14px);
         color: hsl(0 60% 50%);
-        .inf-link{
+
+        .inf-link {
             display: inline;
             text-decoration: underline;
             cursor: pointer;
@@ -25,7 +25,8 @@
     margin: 1rem 0;
     max-width: 1200px;
     margin: 0 auto;
-    font-family: 'Roboto',Arial,sans-serif;
+    font-family: 'Roboto', Arial, sans-serif;
+
     .d-none {
         display: none !important;
     }
@@ -251,9 +252,11 @@
         align-items: center;
         margin: 0 auto;
         margin-bottom: 1rem;
-        .title{
+
+        .title {
             margin-bottom: .5rem;
         }
+
         p:not(.title) {
             display: none;
         }
@@ -289,12 +292,17 @@
 
         &>div {
             display: grid;
+            justify-content: space-around;
             gap: .5rem;
-            grid-template-columns: 1fr 1fr 1fr;
             grid-template-areas:
-                'two three four'
-                'one . six';
+                'one two three four six';
             width: 100%;
+
+            button {
+                width: max(50px, 14vw);
+                height: 50px;
+                padding: 0;
+            }
 
             button:nth-child(1) {
                 grid-area: one;
@@ -368,7 +376,8 @@
                     flex-wrap: wrap;
                     gap: .5rem;
                 }
-                &>p{
+
+                &>p {
                     margin: 1rem 0;
                 }
             }
@@ -409,19 +418,23 @@
 
                 &.move {
                     display: grid;
-                    .coords{
+
+                    .coords {
                         margin-top: 1rem;
                         grid-column: span 2;
                         display: grid;
                         gap: 1rem;
-                        &>div{
+
+                        &>div {
                             display: flex;
                             gap: .5rem;
                             height: 40px;
-                            p{
+
+                            p {
                                 align-self: center;
                             }
-                            input{
+
+                            input {
                                 width: max(23%, 6ch);
                                 font-size: var(--fz);
                             }
@@ -441,7 +454,8 @@
                     font-size: 1.2rem;
                     width: 95%;
                 }
-                #newTextContent{
+
+                #newTextContent {
                     width: 95%;
                 }
 
@@ -452,7 +466,8 @@
                 .text-content {
                     width: 100%;
                     text-align: center;
-                    p{
+
+                    p {
                         text-align: left;
                         margin: 1rem 0 .5rem 0;
                     }
@@ -623,99 +638,111 @@
             svg {
                 margin-left: 1rem;
             }
+
+            &>div {
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr;
+                gap: 1rem;
+                grid-template-areas:
+                    'two three four'
+                    'one . six';
+                button {
+                    width: auto;
+                }
+            }
+        }
+
+        @media screen and (min-width: 1100px) {
+            .templates {
+                min-height: 172px;
+
+                img {
+                    width: 120px;
+                    height: 160px;
+                }
+            }
+
+            .templates {
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+
+            .desktop-content {
+                flex-direction: row;
+                gap: 2rem;
+
+                .tool {
+                    position: sticky;
+                    top: 10%;
+                }
+            }
+
+            #iconPackList {
+                img {
+                    width: clamp(100px, 9.3vw, 132px) !important;
+                    height: clamp(100px, 9.3vw, 132px) !important;
+                }
+            }
+
+            #iconList {
+                img {
+                    width: clamp(100px, 9.3vw, 132px) !important;
+                    height: clamp(100px, 9.3vw, 132px) !important;
+                }
+            }
+        }
+
+        @media screen and (min-width: 1400px) {
+            .wb-projects {
+                display: flex;
+                gap: 0.5rem;
+                flex-direction: column;
+                margin-right: 1rem;
+                padding-right: 1rem;
+                border-right: 1px solid #000;
+            }
+
+            .wb-projects img {
+                width: 100px;
+            }
+
+            .page-1 {
+                width: 33vw;
+            }
+
+            h1 {
+                font-size: 3rem;
+            }
+
+            p,
+            label,
+            #zoomRange {
+                font-size: 1.6em;
+            }
+
+            #zoomRange {
+                width: 5ch;
+            }
+
+            #cropModal label input {
+                transform: scale(1.4);
+            }
+
+            .form-1 {
+                gap: 1rem;
+            }
+
+            .form-1 * {
+                font-size: 2.1rem;
+            }
+
+            .--canvas {
+                margin: 0;
+            }
         }
     }
 
-    @media screen and (min-width: 1100px) {
-        .templates {
-            min-height: 172px;
-
-            img {
-                width: 120px;
-                height: 160px;
-            }
-        }
-
-        .templates {
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        .desktop-content {
-            flex-direction: row;
-            gap: 2rem;
-
-            .tool {
-                position: sticky;
-                top: 10%;
-            }
-        }
-
-        #iconPackList {
-            img {
-                width: clamp(100px, 9.3vw, 132px) !important;
-                height: clamp(100px, 9.3vw, 132px) !important;
-            }
-        }
-
-        #iconList {
-            img {
-                width: clamp(100px, 9.3vw, 132px) !important;
-                height: clamp(100px, 9.3vw, 132px) !important;
-            }
-        }
+    #rec387249894 {
+        margin-bottom: 2rem;
     }
-
-    @media screen and (min-width: 1400px) {
-        .wb-projects {
-            display: flex;
-            gap: 0.5rem;
-            flex-direction: column;
-            margin-right: 1rem;
-            padding-right: 1rem;
-            border-right: 1px solid #000;
-        }
-
-        .wb-projects img {
-            width: 100px;
-        }
-
-        .page-1 {
-            width: 33vw;
-        }
-
-        h1 {
-            font-size: 3rem;
-        }
-
-        p,
-        label,
-        #zoomRange {
-            font-size: 1.6em;
-        }
-
-        #zoomRange {
-            width: 5ch;
-        }
-
-        #cropModal label input {
-            transform: scale(1.4);
-        }
-
-        .form-1 {
-            gap: 1rem;
-        }
-
-        .form-1 * {
-            font-size: 2.1rem;
-        }
-
-        .--canvas {
-            margin: 0;
-        }
-    }
-}
-
-#rec387249894{
-    margin-bottom: 2rem;
 }
