--- a/style.scss
+++ b/style.scss
@@ -216,6 +216,17 @@
         border-radius: 5px;
         outline: none;
     }
+    
+    input[type="checkbox"]{
+        width: auto !important;
+        transform: scale(1.7);
+    }
+
+    .container-checkbox{
+        display: flex !important;
+        align-items: center;
+        gap: 0.5rem;
+    }
 
 
     .templates {
@@ -481,7 +492,12 @@
                 .text__options>div {
                     display: flex;
                     flex-wrap: wrap;
-                    gap: 0.2rem 0.7rem
+                    gap: 0.2rem 1rem;
+                    label {
+                        display: flex;
+                        align-items: center;
+                        gap: .3rem;
+                    }
                 }
 
                 button {
