--- a/style.scss
+++ b/style.scss
@@ -24,7 +24,13 @@
     }
 }
 
-#our-demo {
+#rec387249894 {
+    margin-bottom: 2rem;
+}
+#our-demo{
+    display: none;
+}
+#our-demo, #our-demo-cropModal{
     font-size: 1vw;
     margin: 1rem 0;
     max-width: 1200px;
@@ -636,10 +642,6 @@
                 }
             }
         }
-    }
-
-    #rec387249894 {
-        margin-bottom: 2rem;
     }
 
 
